--- a/stella_school/src/templates/index.html
+++ b/stella_school/src/templates/index.html
@@ -50,7 +50,7 @@
     <div class="school-page-header">
       <nav class="navbar navbar-light">
   <div class="container-fluid">
-    <a class="navbar-brand"><img src="{% static 'img/logo.png' %}"></a>
+    <a class="navbar-brand"><img src="{% static 'images/logo.png' %}"></a>
     <form class="d-flex">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Search</button>
