--- a/stella_school/src/templates/school_managing_commitee.html
+++ b/stella_school/src/templates/school_managing_commitee.html
@@ -5,7 +5,7 @@
 
 <section  class="our-teachers" id="team">
     <div class="container" >
-      <h2><font style="font-size: xxx-large;font-family: system-ui;font-style: oblique;"><b><center><p style="">SCHOOL MANAGING COMMITTE</p></center></b></font></h2>
+      <h2><font style="font-size: xxx-large;font-family: system-ui;font-style: oblique;"><b><center><p style="">SCHOOL MANAGING COMMITTEE</p></center></b></font></h2>
           <div class="row">
             <embed src="{% static 'media/SMC.pdf' %}" type="application/pdf" style="width: 100%;height: 700px;border: none;"  />
 
