--- a/stella_school/src/templates/documents.html
+++ b/stella_school/src/templates/documents.html
@@ -19,16 +19,16 @@
       <tr>
         <th scope="row">1</th>
         <td>Academic Calender</td>
-        <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/NOC.pdf' %}" download="">Click Here</a></td>
+        <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/Annual Academic Calender.pdf' %}" download="">Click Here</a></td>
        
       </tr>
       <tr>
         <th scope="row">2</th>
         <td>School Fee</td>
-        <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/NOC.pdf' %}" download="">Click Here</a></td>
+        <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/New Student School Fee.pdf' %}" download="">Click Here</a></td>
        
       </tr>
-      <tr>
+    
         <tr>
           <th scope="row">3</th>
           <td>NOC</td>
@@ -38,15 +38,40 @@
         <tr>
           <th scope="row">4</th>
           <td>RTE</td>
-          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/NOC.pdf' %}" download="">Click Here</a></td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/RTE act 2009.pdf' %}" download="">Click Here</a></td>
          
         </tr>
         <tr>
           <th scope="row">5</th>
           <td>Water Sanitation Certificate</td>
-          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/NOC.pdf' %}" download="">Click Here</a></td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/water sanitation certificate.pdf' %}" download="">Click Here</a></td>
          
         </tr>
+        <tr>
+          <th scope="row">6</th>
+          <td>PTA</td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/PTA.pdf' %}" download="">Click Here</a></td>
+         
+        </tr>
+        <tr>
+          <th scope="row">7</th>
+          <td>School Managing Commitee</td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/SMC.pdf' %}" download="">Click Here</a></td>
+         
+        </tr>
+        <tr>
+          <th scope="row">8</th>
+          <td>Society Registration Certificate</td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/Society registration certificate.pdf' %}" download="">Click Here</a></td>
+         
+        </tr>
+        <tr>
+          <th scope="row">9</th>
+          <td>Building Safety</td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/Building Safety.pdf' %}" download="">Click Here</a></td>
+         
+        </tr>
+       
     </tbody>
   </table>
 
