--- a/stella_school/src/templates/documents.html
+++ b/stella_school/src/templates/documents.html
@@ -24,7 +24,7 @@
       </tr>
       <tr>
         <th scope="row">2</th>
-        <td>School Fee</td>
+        <td>New Student School Fee</td>
         <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/New Student School Fee.pdf' %}" download="">Click Here</a></td>
        
       </tr>
@@ -71,7 +71,18 @@
           <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/Building Safety.pdf' %}" download="">Click Here</a></td>
          
         </tr>
-       
+        <tr>
+          <th scope="row">10</th>
+          <td>Fire Safety</td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/Fire Safety.pdf' %}" download="">Click Here</a></td>
+         
+        </tr>
+        <tr>
+          <th scope="row">11</th>
+          <td>DEO Certificate</td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/DEO Certificate.pdf' %}" download="">Click Here</a></td>
+         
+        </tr>
     </tbody>
   </table>
 
