--- a/stella_school/static/css/new_styles.css
+++ b/stella_school/static/css/new_styles.css
@@ -332,7 +332,7 @@ padding-right: 8px;
     font-weight: 500;
 }
 
-.stella-v-m{ background-image: url(../images/board.jpg); background-size: cover; padding-top: 80px; padding-bottom: 80px; background-attachment: fixed;
+.stella-v-m{ background-image: url("/static/images/board.jpg"); background-size: cover; padding-top: 80px; padding-bottom: 80px; background-attachment: fixed;
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover; }
@@ -352,7 +352,7 @@ background-size: cover; }
 
 .service-section{  padding-bottom: 80px; padding-top: 80px;
   /* The image used */
-  background-image: url(../images/classroom.jpg);
+  background-image: url("/static/images/yoga.jpg");
 
   /* Set a specific height */
   min-height: 500px;
@@ -502,7 +502,7 @@ color: #fff; padding-bottom: 25px;
 
 /* PRE-SCHOOL START */
 .pre-school-banner {
-    background-image: url(../images/pre-banner.jpg);
+    background-image: url("/static/images/pre-banner.jpg");
     width: 100%;
     height: 595px;
     background-size: cover;
@@ -517,7 +517,7 @@ color: #fff; padding-bottom: 25px;
     padding-top: 15px;
 }
 .about {
-    background-image: url(../images/about.jpg);
+    background-image: url("/static/images/about.jpg");
     width: 100%;
     height: 540px;
     background-size: cover;
@@ -616,7 +616,7 @@ color: #fff; padding-bottom: 25px;
 }
 .school-nav-page{ margin-bottom: 4px; }
 .chavar-banner {
-    background-image: url(../images/chavara-school.jpg);
+    background-image: url("/static/images/chavara-school.jpg");
     width: 100%;
     height: 225px;
     background-size: cover;
@@ -856,7 +856,7 @@ color: #fff; padding-bottom: 25px;
 
 .school-nav-page{ margin-bottom: 4px; }
 .chavar-banner {
-    background-image: url(../images/chavara-school.jpg);
+    background-image: url("/static/images/chavara-school.jpg");
     width: 100%;
     height: 225px;
     background-size: cover;
@@ -1126,7 +1126,7 @@ color: #fff; padding-bottom: 25px;
 /* SCHOOL PAGE-1 */
 .school-nav-page{ margin-bottom: 4px; }
 .chavar-banner {
-    background-image: url(../images/chavara-school.jpg);
+    background-image: url("/static/images/chavara-school.jpg");
     width: 100%;
     height: 112px;
     background-size: cover;
