--- a/stella_school/src/templates/index.html
+++ b/stella_school/src/templates/index.html
@@ -112,10 +112,11 @@
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2" class="active" aria-current="true"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 4" class=""></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item">
-      <img src="{% static 'images/school-banner-1.jpg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'images/banner.jpg' %}" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block">
         <h2>English medium school Nursery to 12  (CBSE)</h2>
         <p>The Pre-Primary Section sets the tone for learning at St. Chavara Public School.<br> The onset of this formal education is overseen by trained and passionate teachers,</p>
@@ -123,7 +124,7 @@
       </div>
     </div>
     <div class="carousel-item active">
-      <img src="{% static 'images/school-banner.jpg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'images/banner-2.jpg' %}" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block">
         <h2>English medium school Nursery to 12  (CBSE)</h2>
         <p>The Primary Section extensively works at building and nurturing the preliminary<br>mindsets of students, in preparation for Secondary School.</p>
@@ -131,7 +132,15 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="{% static 'images/school-banner-2.jpg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'images/banner-1.jpg' %}" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-md-block">
+        <h2>English medium school Nursery to 12  (CBSE)</h2>
+        <p>The Secondary School follows the CBSE curriculum and is delivered by trained<br>and experienced professionals.</p>
+        <button type="button" class="btn btn-outline-light">Read More</button>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'images/banner-1.jpg' %}" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block">
         <h2>English medium school Nursery to 12  (CBSE)</h2>
         <p>The Secondary School follows the CBSE curriculum and is delivered by trained<br>and experienced professionals.</p>
