--- a/stella_school/static/css/new_styles.css
+++ b/stella_school/static/css/new_styles.css
@@ -332,7 +332,7 @@ padding-right: 8px;
     font-weight: 500;
 }
 
-.stella-v-m{ background-image: url("/static/images/board.jpg"); background-size: cover; padding-top: 80px; padding-bottom: 80px; background-attachment: fixed;
+.stella-v-m{ background-image: url("/static/images/dance.jpg"); background-size: cover; padding-top: 80px; padding-bottom: 80px; background-attachment: fixed;
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover; }
