contact form completed

--- a/stella_school/src/templates/index.html
+++ b/stella_school/src/templates/index.html
@@ -106,7 +106,7 @@
 </section>
 
 
-
+{% include 'messages.html' %}
 <section class="banner-section" style="padding: 0px;">
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -364,80 +364,54 @@
 
 
 
-   <section class="form-container">
-    <div class="container form-section">
+<section id="contact" class="form-container">
+  <div class="container form-section">
+      <h2>FOR MORE INFORMATION</h2>
+      <h6>WANT TO KNOW MORE ABOUT OUR SCHOOL?</h6>
       
-        <h2>REQUEST MORE INFORMATION</h2>
-        <h6>WANT TO HEAR MORE ABOUT OUR SCHOOL?</h6>
-     <div class="contact-form">
-<h4>Please fill in the below</h4>
-<div class="row">
-                    <div class="col-sm-6">
+      <div class="contact-form">
+          <h4>Please fill in the below</h4>
+          <form id="idForm" action="{% url 'index' %}" method="post" name="contact-form">
+              {% csrf_token %}
+              <div class="row">
+                  <div class="col-sm-6">
                       <!-- text input -->
                       <div class="form-group">
-                        <label>First Name*</label>
-                        <input type="text" class="form-control" placeholder="First Name ...">
+                          <label>Name*</label>
+                          <input id="{{ from.name.id_for_label }}" name="{{form.name.name}}" class="form-control" placeholder="Your Name ..." type="text" maxlength="100" required>
                       </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <div class="form-group">
-                        <label>Last Name*</label>
-                        <input type="text" class="form-control" placeholder="Last Name ...">
-                      </div>
-                    </div>
-                     <div class="col-sm-6">
-                      <!-- text input -->
-                      <div class="form-group">
-                        <label>Email*</label>
-                        <input type="text" class="form-control" placeholder="Email ...">
-                      </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <div class="form-group">
-                        <label>Phone*</label>
-                        <input type="text" class="form-control" placeholder="Phone ...">
-                      </div>
-                    </div>
-                     <div class="col-sm-6">
-                      <!-- text input -->
-                      <div class="form-group">
-                        <label>Text*</label>
-                        <input type="text" class="form-control" placeholder="Enter ...">
-                      </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <div class="form-group">
-                        <label>Text Disabled*</label>
-                        <input type="text" class="form-control" placeholder="Enter ...">
-                      </div>
-                    </div>
-
                   </div>
-                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-  SUBMIT
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel"><img src="{% static 'images/school-logo.png' %}"></h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        The message was successfully delivered
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      </div>
-    </div>
+                  <div class="col-sm-6">
+                      <div class="form-group">
+                          <label>Email*</label>
+                          <input id="{{ from.email.id_for_label }}" name="{{form.email.name}}" class="form-control" placeholder="Email ..." type="email" maxlength="100" required>
+                      </div>
+                  </div>
+                  <div class="col-sm-6">
+                      <!-- text input -->
+                      <div class="form-group">
+                          <label>Phone*</label>
+                          <input id="{{ from.mobile.id_for_label }}" name="{{form.mobile.name}}" class="form-control" placeholder="Phone ..." type="text" maxlength="20" required>
+                      </div>
+                  </div>
+                  <div class="col-sm-6">
+                      <div class="form-group">
+                          <label>Subject</label>
+                          <input id="{{ from.subject.id_for_label }}" name="{{form.subject.name}}" class="form-control" placeholder="Subject ..." type="text" maxlength="250">
+                      </div>
+                  </div>
+                  <div class="col-sm-12">
+                      <div class="form-group">
+                          <label>Your Query*</label>
+                          <textarea class="form-control" name="{{form.query.name}}" id="{{ form.query.id_for_label }}" placeholder="Enter Your Queries Here ..." rows="2"></textarea>
+                      </div>
+                  </div>
+              </div>
+              <button class="btn btn-success" type="submit">SUBMIT</button>
+          </form>
+          
   </div>
-</div>
-      </div>
-
-    </div>
-   </section>
+</section>
    <section class="contact-head" style="padding:0px;">
      <img src="{% static 'images/contact-head.png' %}" class="img-fluid" alt="...">
    </section>
@@ -481,7 +455,7 @@
 </ul>
 </div>
 <div class="contact-details">
-<p><i class="far fa-paper-plane"></i>stellamarishanga@gmail.com</p>
+<p><i class="far fa-paper-plane"></i><a href="mailto:stellamarishanga@gmail.com">stellamarishanga@gmail.com</a> </p>
 <p><i class="fas fa-mobile-alt"></i>+91 86 00 31 63 70</p>
 <p><i class="fas fa-mobile-alt"></i>+91 86 00 31 63 70</p>
 </div>
@@ -503,7 +477,13 @@
   </script> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script> 
-
+  <script>
+    setTimeout(function(){
+        if ($('#msg').length > 0) {
+            $('#msg').remove();
+        }
+    }, 5000)
+</script>
   <script>
          $('.team-slider').owlCarousel({
              loop: true,            
