--- a/stella_school/src/templates/index.html
+++ b/stella_school/src/templates/index.html
@@ -206,7 +206,7 @@
               
               
             <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-3070px, 0px, 0px); transition: all 0.45s ease 0s; width: 4826px;"><div class="owl-item cloned" style="width: 418.667px; margin-right: 20px;"><div class="single-box text-center">
-                <div class="img-area"><img alt="" class="img-fluid move-animation" src="https://i.postimg.cc/TYTxWM9S/3.png"></div>
+                <div class="img-area"><img alt="" class="img-fluid move-animation" src="{% static 'images/Maria.png' %}"></div>
                 <div class="info-area">
                   <h4>Person's Name</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, ullam.</p>
@@ -421,7 +421,7 @@
          <div class="row">
            <div class="col-12 col-sm-3 col-lg-3 footer-logo">
              <img src="{% static 'images/logo.png' %}">
-             <p>Stella Maris Convent School started in 2013 at Hanga Maharashtra by the Congregation of the Daughters of Mary. The School is managed by the Congregation of the Daughters of Mary.</p>
+             <p>Stella Maris Convent School started in 2013 at Hanga Maharashtra by the Congregation of the Daughters of Mary. The School is managed by the Society of the Daughters of Mary Chanda.</p>
            </div>
            <div class="col-12 col-sm-3 col-lg-3 quik-lnk">
        
