--- a/stella_school/src/templates/base.html
+++ b/stella_school/src/templates/base.html
@@ -88,7 +88,7 @@
           <a class="nav-link" href="{% url 'index' %}#board-members-sch">OUR TEACHERS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'index' %}#career">CAREER</a>
+          <a class="nav-link" href="{% url 'index' %}#gallery">GALLERY</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'index' %}#contact">CONTACT US</a>
