--- a/stella_school/src/templates/index.html
+++ b/stella_school/src/templates/index.html
@@ -290,26 +290,26 @@
         <a class="spotlight" href="{% static 'gallery/1.jpg' %}"  data-description="">
             <img src="{% static 'gallery/1.1.jpg' %}" alt="">
         </a>
-        <a class="spotlight" href="{% static 'gallery/2.jpg' %}" data-description="Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.">
-            <img src="{% static 'gallery/2.2.jpg' %}" alt="At vero eos et accusam">
+        <a class="spotlight" href="{% static 'gallery/2.jpg' %}" data-description="">
+            <img src="{% static 'gallery/2.2.jpg' %}" alt="">
         </a>
-        <a class="spotlight" href="{% static 'gallery/3.jpg' %}" data-description="In hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim.">
-            <img src="{% static 'gallery/3.3.jpg' %}" alt="Duis autem vel eum iriure dolor">
+        <a class="spotlight" href="{% static 'gallery/3.jpg' %}" data-description="">
+            <img src="{% static 'gallery/3.3.jpg' %}" alt="">
         </a>
-<a class="spotlight" href="{% static 'gallery/4.jpg' %}" data-button="Click Me!" data-button-href="javascript:alert('You can open an URL or execute some Javascript here.')" data-description="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.">
-            <img src="{% static 'gallery/4.4.jpg' %}" alt="Lorem ipsum dolor sit amet">
+<a class="spotlight" href="{% static 'gallery/4.jpg' %}" data-description="">
+            <img src="{% static 'gallery/4.4.jpg' %}" alt="">
         </a>
-        <a class="spotlight" href="{% static 'gallery/5.jpg' %}" data-description="Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.">
-            <img src="{% static 'gallery/5.5.jpg' %}" alt="At vero eos et accusam">
+        <a class="spotlight" href="{% static 'gallery/5.jpg' %}" data-description="">
+            <img src="{% static 'gallery/5.5.jpg' %}" alt="">
         </a>
-        <a class="spotlight" href="{% static 'gallery/6.jpg' %}" data-description="In hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim.">
-            <img src="{% static 'gallery/6.6.jpg' %}" alt="Duis autem vel eum iriure dolor">
+        <a class="spotlight" href="{% static 'gallery/6.jpg' %}" data-description="">
+            <img src="{% static 'gallery/6.6.jpg' %}" alt="">
         </a>
-         <a class="spotlight" href="{% static 'gallery/7.jpg' %}" data-description="Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.">
-            <img src="{% static 'gallery/7.7.jpg' %}" alt="At vero eos et accusam">
+         <a class="spotlight" href="{% static 'gallery/7.jpg' %}" data-description="">
+            <img src="{% static 'gallery/7.7.jpg' %}" alt="">
         </a>
-        <a class="spotlight" href="{% static 'gallery/1.jpg' %}" data-description="In hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim.">
-            <img src="{% static 'gallery/1.1.jpg' %}" alt="Duis autem vel eum iriure dolor">
+        <a class="spotlight" href="{% static 'gallery/1.jpg' %}" data-description="">
+            <img src="{% static 'gallery/1.1.jpg' %}" alt="">
         </a>
     </div>
   </div>
