--- a/stella_school/src/templates/index.html
+++ b/stella_school/src/templates/index.html
@@ -302,8 +302,8 @@
         <a class="spotlight" href="{% static 'gallery/5.jpg' %}" data-description="">
             <img src="{% static 'gallery/5.5.jpg' %}" alt="">
         </a>
-        <a class="spotlight" href="{% static 'gallery/6.jpg' %}" data-description="">
-            <img src="{% static 'gallery/6.6.jpg' %}" alt="">
+        <a class="spotlight" href="{% static 'gallery/6.JPG' %}" data-description="">
+            <img src="{% static 'gallery/6.6.JPG' %}" alt="">
         </a>
          <a class="spotlight" href="{% static 'gallery/7.jpg' %}" data-description="">
             <img src="{% static 'gallery/7.7.jpg' %}" alt="">
