--- a/stella_school/src/templates/index.html
+++ b/stella_school/src/templates/index.html
@@ -81,7 +81,7 @@
           <a class="nav-link" href="{% url 'index' %}#about_school">ABOUT US</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">ADMISSION</a>
+          <a class="nav-link" href="{% url 'index' %}#contact">ADMISSION</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'documents' %}">DOCUMENTS</a>
@@ -156,7 +156,7 @@
 
 
 </section>
-<section class="chavara-about">
+<section id="about_school" class="chavara-about">
   <div class="container">
   <h3>HISTORY OF STELLA MARIS CONVENT SCHOOL</h3>
   <p>Congregation of the Daughters of Mary was established in the year 1938 in Kanyakumari District at Tamilnadu. The good services of the Congregation spread all over the world, making a beginning in Maharashtra in 1981. The society tries to live up to the ideas of the founders Msgr. Joseph Kuzhinjalil and Mother Mary Kallarackal, in spreading the flame of Charity. The essential effort is in proclaiming to the world that unity and happiness lies in service.</p>
