--- a/stella_school/src/templates/base.html
+++ b/stella_school/src/templates/base.html
@@ -76,10 +76,10 @@
           <a class="nav-link active" aria-current="page" href="{% url 'index' %}">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about_school">ABOUT US</a>
+          <a class="nav-link" href="{% url 'index' %}#about_school">ABOUT US</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">ADMISSION</a>
+          <a class="nav-link" href="{% url 'index' %}#contact">ADMISSION</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'index' %}#documents">COMMUNITY PORTAL</a>
